--- a/investix/sass/blocks/header.scss
+++ b/investix/sass/blocks/header.scss
@@ -1,11 +1,15 @@
 .header {
-  padding: 15px 0;
+  padding: 17px 0;
 }
 
 .header__flex {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header__link {
+  height: 40px;
 }
 
 .header__logo {
