--- a/investix/sass/blocks/services.scss
+++ b/investix/sass/blocks/services.scss
@@ -2,6 +2,11 @@
   padding: 0 0 100px 0;
   background: url('../img/services-bg.jpg') no-repeat 0 80px;
   background-size: contain;
+  
+  &--account-programs {
+    padding: 60px 0 100px 0;
+    background: none;
+  }
 }
 
 .services__title {
@@ -105,6 +110,10 @@
   .services {
     padding: 50px 0;
     background: #d5f9fc;
+    
+    &--account-programs {
+      background: none;
+    }
   }
   
   .services__title {
