--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -472,6 +472,8 @@ body {
 @media screen and (max-width: 1200px) {
   .services {
     background: linear-gradient(-123deg, #f2f2f2 0%, #e0f7f9 52%, #cefbff 100%) no-repeat 0 49px/100% 510px; }
+    .services--account-programs {
+      background: none; }
   .services__title {
     font-size: 50px; }
   .services__subtitle {
@@ -502,7 +504,7 @@ body {
 @media screen and (max-width: 768px) {
   .services {
     padding: 50px 0;
-    background: #d5f9fc; }
+    background: linear-gradient(-123deg, #f2f2f2 0%, #e0f7f9 52%, #cefbff 100%) no-repeat 0/100%; }
     .services--account-programs {
       background: none; }
     .services--account {
@@ -535,7 +537,8 @@ body {
   background-size: cover; }
   .live--account-programs {
     padding: 60px 0;
-    background: #086cfc url("../img/live-bg.jpg") no-repeat top; }
+    background: #086cfc url("../img/live-bg.jpg") no-repeat top;
+    background-size: cover; }
 
 .live__flex {
   display: -webkit-box;
@@ -1129,10 +1132,9 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between; }
   .account-programs__flex--second {
-    margin: 50px 0 0 0; }
-  .account-programs__flex--around {
     -ms-flex-pack: distribute;
-    justify-content: space-around; }
+    justify-content: space-around;
+    margin: 50px 0 0 0; }
 
 .account-programs__left {
   width: 700px; }
@@ -1141,10 +1143,10 @@ body {
   position: absolute;
   top: -140px;
   right: 0;
-  width: 310px;
-  height: 530px; }
-  .account-programs__right--intro {
-    background: url("../img/slider-1.png") no-repeat center;
+  width: 290px;
+  height: 480px; }
+  .account-programs__right--basic {
+    background: url("../img/basic.png") no-repeat top;
     background-size: cover; }
   .account-programs__right--student {
     background: url("../img/slider-2.png") no-repeat center;
@@ -1173,45 +1175,42 @@ body {
   background: linear-gradient(-123deg, #f2f2f2 0%, #e0f7f9 52%, #cefbff 100%); }
 
 .account-programs__box {
-  padding: 120px 0 0 0;
-  width: 270px; }
+  padding: 80px 0 0 0;
+  width: 250px; }
   .account-programs__box b {
     font-size: 24px;
     font-weight: normal; }
-  .account-programs__box ul {
-    margin: 25px 0 0 0;
-    padding: 0;
-    list-style: none; }
-  .account-programs__box--self {
-    background: url("../img/self.svg") no-repeat top left;
-    background-size: 100px; }
-  .account-programs__box--chat {
-    background: url("../img/chat.svg") no-repeat top left;
-    background-size: 100px; }
-  .account-programs__box--book {
-    background: url("../img/book.svg") no-repeat top left;
-    background-size: 100px; }
+  .account-programs__box--video {
+    background: url("../img/video.svg") no-repeat top left;
+    background-size: 70px; }
+  .account-programs__box--reviews {
+    background: url("../img/reviews.svg") no-repeat top left;
+    background-size: 70px; }
+  .account-programs__box--weekly {
+    background: url("../img/weekly.svg") no-repeat top left;
+    background-size: 70px; }
+  .account-programs__box--room {
+    background: url("../img/room.svg") no-repeat top left;
+    background-size: 70px; }
+  .account-programs__box--webinar {
+    background: url("../img/webinar.svg") no-repeat top left;
+    background-size: 70px; }
   .account-programs__box--demo {
     background: url("../img/demo.svg") no-repeat top left;
-    background-size: 100px; }
-  .account-programs__box--mentor {
-    background: url("../img/mentor.svg") no-repeat top left;
-    background-size: 100px; }
-  .account-programs__box--star {
-    background: url("../img/star.svg") no-repeat top left;
-    background-size: 100px; }
-  .account-programs__box--forex {
-    background: url("../img/forex.svg") no-repeat top left;
-    background-size: 100px; }
-  .account-programs__box--top {
-    background: url("../img/top.svg") no-repeat top left;
-    background-size: 100px; }
+    background-size: 70px; }
+  .account-programs__box--analysis {
+    background: url("../img/analysis.svg") no-repeat top left;
+    background-size: 70px; }
 
 @media screen and (max-width: 1200px) {
   .account-programs__name {
     font-size: 50px; }
     .account-programs__name--small {
       font-size: 30px; }
+  .account-programs__box {
+    width: 190px; }
+    .account-programs__box b {
+      font-size: 16px; }
   .account-programs__left {
     width: 400px; }
   .account-programs__right {
@@ -1258,29 +1257,26 @@ body {
   .account-programs__box {
     margin: 0 0 50px 0;
     text-align: center; }
-    .account-programs__box--self {
-      background: url("../img/self.svg") no-repeat top;
-      background-size: 100px; }
-    .account-programs__box--chat {
-      background: url("../img/chat.svg") no-repeat top;
-      background-size: 100px; }
-    .account-programs__box--book {
-      background: url("../img/book.svg") no-repeat top;
-      background-size: 100px; }
+    .account-programs__box--video {
+      background: url("../img/video.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--reviews {
+      background: url("../img/reviews.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--weekly {
+      background: url("../img/weekly.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--room {
+      background: url("../img/room.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--webinar {
+      background: url("../img/webinar.svg") no-repeat top;
+      background-size: 70px; }
     .account-programs__box--demo {
       background: url("../img/demo.svg") no-repeat top;
-      background-size: 100px; }
-    .account-programs__box--mentor {
-      background: url("../img/mentor.svg") no-repeat top;
-      background-size: 100px; }
-    .account-programs__box--star {
-      background: url("../img/star.svg") no-repeat top;
-      background-size: 100px; }
-    .account-programs__box--forex {
-      background: url("../img/forex.svg") no-repeat top;
-      background-size: 100px; }
-    .account-programs__box--top {
-      background: url("../img/top.svg") no-repeat top;
-      background-size: 100px; }
+      background-size: 70px; }
+    .account-programs__box--analysis {
+      background: url("../img/analysis.svg") no-repeat top;
+      background-size: 70px; }
     .account-programs__box:last-child {
       margin: 0; } }
