--- a/investix/sass/blocks/live.scss
+++ b/investix/sass/blocks/live.scss
@@ -6,6 +6,7 @@
   &--account-programs {
     padding: 60px 0;
     background: #086cfc url('../img/live-bg.jpg') no-repeat top;
+    background-size: cover;
   }
 }
 
